--- a/ecommerce-mobile/app.json
+++ b/ecommerce-mobile/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "ecommerce-mobile",
-    "slug": "ecommerce-mobile",
+    "slug": "specialized-platform-development",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -9,7 +9,8 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.spd.ecommercemobile"
     },
     "android": {
       "adaptiveIcon": {
@@ -18,6 +19,7 @@
         "backgroundImage": "./assets/images/android-icon-background.png",
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
+      "package": "com.spd.ecommercemobile",
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
     },
@@ -43,6 +45,13 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "caf20418-a3cd-4d4f-b412-231b42dbfe59"
+      }
+    },
+    "owner": "hanifnaufal"
   }
 }
